# OpenGlyph

./: .clang-format  CMakeLists.txt  CODING_STANDARDS.md  LICENSE  README.md  conanfile.py
.github/scripts/: build-dependency.sh
.github/workflows/: main.yml
include/openglyph/: exceptions.hpp  version.hpp
include/openglyph/assets/: asset_cache.hpp  asset_loader.hpp  map.hpp
include/openglyph/assets/io/: map.hpp
include/openglyph/game/: environment.hpp  game_object_type.hpp  game_object_type_store.hpp  scene.hpp  scene_renderer.hpp
include/openglyph/game/behaviors/: render_behavior.hpp
include/openglyph/io/: chunk_reader.hpp
include/openglyph/parser/: exceptions.hpp  parsers.hpp  xml_parser.hpp
include/openglyph/renderer/: material_desc.hpp  material_store.hpp  model.hpp  model_creator.hpp  render_model.hpp
include/openglyph/renderer/io/: material.hpp  model.hpp
src/: version.cpp
src/assets/: asset_cache.cpp  asset_loader.cpp
src/assets/io/: map.cpp
src/game/: game_object_type_store.cpp  scene.cpp  scene_renderer.cpp
src/io/: chunk_reader.cpp
src/parser/: parsers.cpp  xml_parser.cpp
src/renderer/: material_store.cpp  model_creator.cpp
src/renderer/io/: material.cpp  model.cpp
test_package/: CMakeLists.txt  test_package.cpp
